WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58772
[chromium, win] Multiple failures of shadow rendering layout tests
https://bugs.webkit.org/show_bug.cgi?id=58772
Summary
[chromium, win] Multiple failures of shadow rendering layout tests
Andrey Kosyakov
Reported
2011-04-18 03:01:59 PDT
The following tests fail on chromium win since around
r83936
: fast/multicol/shadow-breaking.html fast/repaint/shadow-multiple-horizontal.html fast/repaint/shadow-multiple-strict-horizontal.html fast/repaint/shadow-multiple-strict-vertical.html fast/repaint/shadow-multiple-vertical.html fast/text/shadow-translucent-fill.html fast/transforms/shadows.html svg/css/group-with-shadow.svg svg/css/shadow-changes.svg svg/css/text-shadow-multiple.xhtml transitions/svg-text-shadow-transition.html svg/css/composite-shadow-text.svg Note the shadow is missing on many elements:
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#group=%40ToT%20-%20chromium.org&tests=fast%2Fmulticol%2Fshadow-breaking.html%2Cfast%2Frepaint%2Fshadow-multiple-horizontal.html%2Cfast%2Frepaint%2Fshadow-multiple-strict-horizontal.html%2Cfast%2Frepaint%2Fshadow-multiple-strict-vertical.html%2Cfast%2Frepaint%2Fshadow-multiple-vertical.html%2Cfast%2Ftext%2Fshadow-translucent-fill.html%2Cfast%2Ftransforms%2Fshadows.html%2Csvg%2Fcss%2Fgroup-with-shadow.svg%2Csvg%2Fcss%2Fshadow-changes.svg%2Csvg%2Fcss%2Ftext-shadow-multiple.xhtml%2Ctransitions%2Fsvg-text-shadow-transition.html%2Csvg%2Fcss%2Fcomposite-shadow-text.svg
Attachments
Patch
(2.42 KB, patch)
2011-04-21 10:00 PDT
,
Mike Reed
no flags
Details
Formatted Diff
Diff
Patch
(846.94 KB, patch)
2011-04-22 10:40 PDT
,
Mike Reed
no flags
Details
Formatted Diff
Diff
Patch
(846.94 KB, patch)
2011-04-22 10:51 PDT
,
Mike Reed
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Stephen White
Comment 1
2011-04-18 13:40:04 PDT
According to the flakiness dashboard, it started failing at either
r83935
or
r83936
.
http://trac.webkit.org/log/?verbose=on&rev=83936&stop_rev=83935
Mike and Brian, over to you.
Mike Reed
Comment 2
2011-04-21 10:00:27 PDT
Created
attachment 90549
[details]
Patch
Mike Reed
Comment 3
2011-04-21 10:02:34 PDT
When I changed the shadow code before, I incorrectly assumed that the shadow's alpha should be modulated by the fillColor's alpha. Wrong (at least for webkit). This change ignores the fillColor's alpha by overwriting it for the shadow layer (hence the kSrc_Mode).
Stephen White
Comment 4
2011-04-21 10:19:44 PDT
Looks good (unofficially). Nit: Probably better to use C++-style comments (//) for consistency with the rest of the file. There's nothing in the style guide about it, though, so you can feel free to ignore me. :)
Kenneth Russell
Comment 5
2011-04-21 10:21:07 PDT
Comment on
attachment 90549
[details]
Patch Sounds fine. r=me
WebKit Commit Bot
Comment 6
2011-04-21 12:06:21 PDT
The commit-queue encountered the following flaky tests while processing
attachment 90549
[details]
: http/tests/misc/favicon-loads-with-icon-loading-override.html
bug 58412
(author:
alice.liu@apple.com
) http/tests/xmlhttprequest/basic-auth-nouser.html
bug 52978
The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7
2011-04-21 12:10:12 PDT
Comment on
attachment 90549
[details]
Patch Clearing flags on attachment: 90549 Committed
r84535
: <
http://trac.webkit.org/changeset/84535
>
WebKit Commit Bot
Comment 8
2011-04-21 12:10:16 PDT
All reviewed patches have been landed. Closing bug.
Mike Reed
Comment 9
2011-04-22 10:40:57 PDT
Created
attachment 90722
[details]
Patch
Mike Reed
Comment 10
2011-04-22 10:43:20 PDT
Reopening to update test_expectations and baseline images
Mike Reed
Comment 11
2011-04-22 10:51:47 PDT
Created
attachment 90724
[details]
Patch
Eric Seidel (no email)
Comment 12
2011-04-22 10:52:14 PDT
Comment on
attachment 90724
[details]
Patch OK.
WebKit Commit Bot
Comment 13
2011-04-22 12:43:01 PDT
The commit-queue encountered the following flaky tests while processing
attachment 90724
[details]
: media/video-playbackrate.html
bug 58629
(author:
eric.carlson@apple.com
) http/tests/xmlhttprequest/cross-origin-authorization.html
bug 52398
(author:
ap@webkit.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 14
2011-04-22 12:50:09 PDT
Comment on
attachment 90724
[details]
Patch Clearing flags on attachment: 90724 Committed
r84663
: <
http://trac.webkit.org/changeset/84663
>
WebKit Commit Bot
Comment 15
2011-04-22 12:50:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug