2011-04-21  Mike Reed  <reed@google.com>

Reviewed by Kenneth Russell.

        [chromium, win] Multiple failures of shadow rendering layout tests
        https://bugs.webkit.org/show_bug.cgi?id=58772

        No new tests. This CL fixes a regression in the following tests
        fast/multicol/shadow-breaking.html
        fast/repaint/shadow-multiple-horizontal.html
        fast/repaint/shadow-multiple-strict-horizontal.html
        fast/repaint/shadow-multiple-strict-vertical.html
        fast/repaint/shadow-multiple-vertical.html
        fast/text/shadow-translucent-fill.html
        fast/transforms/shadows.html
        svg/css/group-with-shadow.svg
        svg/css/shadow-changes.svg
        svg/css/text-shadow-multiple.xhtml
        transitions/svg-text-shadow-transition.html
        svg/css/composite-shadow-text.svg

        * platform/graphics/skia/GraphicsContextSkia.cpp:
        (WebCore::GraphicsContext::setPlatformShadow):

Canonical link: https://commits.webkit.org/74274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84535 268f45cc-cd09-0410-ab3c-d52691b4dbfc